# Rust_Diesel_Rocket

./: Cargo.toml  README.md  Rocket.toml
migrations/2024-03-20-060017_create_birds/: up.sql
src/: main.rs  models.rs  schema.rs
